allow-nothing.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: allow-nothing
  namespace: online-shop
spec:
  action: ALLOW
  # the rules field is not specified, and the policy will never match.
