frontend-to-product.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: frontend-to-product
  namespace: online-shop
spec:
  selector:
    matchLabels:
      run: online-shop-product
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/online-shop/sa/frontend"]
